--- a/html/exercises/index.html
+++ b/html/exercises/index.html
@@ -9,8 +9,16 @@
   </head>
   <body>
     <!-- h1 goes here -->
+    <h1>Why I love Web Development</h1>
     <!-- ol goes here -->
+    <ol>
+      <li>Flexibility in design</li>
+      <li>Interactive user experience</li>
+      <li>Continuous learning and innovation</li>
+    </ol>
     <!-- a goes here -->
+    <a href="https://www.webelements.com/" target="_blank">WebElements</a>
     <!-- p goes here -->
+    <p>With my abilities to develope web applications, I would like to produce a webpage for my own company. One that allows ease of use for all users, and will promote my company in a clean and concise manner.</p>
   </body>
 </html>
